--- a/video.html
+++ b/video.html
@@ -13,21 +13,11 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,200&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
-    <script src="https://vk.com/js/api/openapi.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        VK.init({apiId: 5070963, onlyWidgets: true});
-    </script>
     <meta property="fb:admins" content="{}"/>
-
-    <script src="themes/6/mcVideoPlugin.js" type="text/javascript"></script>
-    <script src="themes/6/js-image-slider.js" type="text/javascript"></script>
     <link href="themes/6/js-image-slider.css" rel="stylesheet" type="text/css" />
-    <script src="themes/6/mcVideoPlugin.js" type="text/javascript"></script>
-    <script src="themes/6/js-image-slider.js" type="text/javascript"></script>
     <link href="css/generic.css" rel="stylesheet" type="text/css" />
-
-
+    <script src="https://vk.com/js/api/openapi.js" type="text/javascript"></script>
+    <script type="text/javascript">VK.init({apiId: 5070963, onlyWidgets: true});</script>
 
 </head>
 <body>
@@ -37,41 +27,118 @@
     <img class="img-responsive" src="images/bg.jpg">
 </div>
 
-<div id="sliderFrame">
-    <div id="slider">
-        <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
-            <img src="images/image-slider-1.jpg" alt="Урок 1" />
-        </a>
-        <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
-            <b data-src="images/image-slider-2.jpg">alt="Урок 2"</b>
-        </a>
-        <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
-            <b data-src="images/image-slider-3.jpg">Image Slider</b>
-        </a>
-        <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
-            <b data-src="https://www.youtube.com/watch?v=F4DL31uxPIU">Slide 5</b>
-        </a>
+<!-- large lesson view -->
+<div class="col-md-8">
+    <div id="sliderFrame">
+        <div id="slider">
+            <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
+                <img src="images/image-slider-1.jpg" alt="Урок 1" />
+            </a>
+            <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
+                <b data-src="images/image-slider-2.jpg">alt="Урок 2"</b>
+            </a>
+            <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
+                <b data-src="images/image-slider-3.jpg">Image Slider</b>
+            </a>
+            <a class="video" href="https://www.youtube.com/watch?v=F4DL31uxPIU">
+                <b data-src="https://www.youtube.com/watch?v=F4DL31uxPIU">Slide 5</b>
+            </a>
+        </div>
     </div>
 </div>
+<!-- large lesson view end -->
+
+<!-- small 1st lesson -->
+    <div class="col-md-4">
+        <div class="embed-responsive embed-responsive-video correct">
+            <iframe width="460" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+<!-- small 1st lesson end -->
 
 
-<div class="clearfix"></div>
+
 <div class="content-row"></div>
 <div class="col-md-8">
     <div class="col-md-6">
-        <!-- Put this div tag to the place, where the Comments block will be -->
+        <!--  Comments block -->
         <div id="vk_comments"></div>
     </div>
     <div class="col-md-6">
         <div class="fb-comments" data-href="http://hr-kavjarnia.com.ua/sekretycomunicaciioctober/video.html" data-width="365" data-numposts="20"></div>
     </div>
+    <!--  Comments block end-->
+</div>
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
 </div>
 
-    <div class="comments">Lorem ipsum dolor sit amet.</div>
 
+<div class="col-md-8"></div>
+<!-- small 2st lesson -->
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+<!-- small 2st lesson end -->
+
+
+<div class="col-md-8"></div>
+<!-- small 3rd lesson -->
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+<!-- small 3rd lesson end -->
+
+
+<div class="col-md-8"></div>
+<!-- small 4st lesson -->
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+<!-- small 4st lesson end -->
+
+
+<div class="col-md-8"></div>
+<!-- small 5st lesson -->
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+<!-- small 5st lesson end -->
+
+
+
+<div class="col-md-8"></div>
+<!-- small 6st lesson -->
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+<!-- small 6st lesson end -->
+
+
+<div class="col-md-8"></div>
+<!-- small 7st lesson -->
+<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-video correct">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
+<!-- small 7st lesson end -->
 
     <div id="fb-root"></div>
 
+<!--scripts-->
         <script>(function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
@@ -80,10 +147,11 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
         </script>
-
+<script type="text/javascript">VK.Widgets.Comments("vk_comments", {limit: 20, width: "365", attach: "*"});</script>
+<script src="themes/6/mcVideoPlugin.js" type="text/javascript"></script>
+<script src="themes/6/js-image-slider.js" type="text/javascript"></script>
+<script src="themes/6/mcVideoPlugin.js" type="text/javascript"></script>
+<script src="themes/6/js-image-slider.js" type="text/javascript"></script>
+<!--scripts-->
 </body>
-<script type="text/javascript">
-    VK.Widgets.Comments("vk_comments", {limit: 20, width: "365", attach: "*"});
-</script>
-
 </html>
