add images for youtube lists

--- a/video.html
+++ b/video.html
@@ -54,17 +54,17 @@
         <!-- Lessens list -->
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail" data-href="https://www.youtube.com/embed/F4DL31uxPIU">
-            <img src="http://placehold.it/350x150" alt="...">
+            <img src="http://img.youtube.com/vi/F4DL31uxPIU/sddefault.jpg" alt="..." class="preViewTube">
           </div>
         </div>
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail" data-href="https://www.youtube.com/embed/5CEEjTRCujM">
-            <img src="http://placehold.it/350x150" alt="...">
+            <img src="http://img.youtube.com/vi/5CEEjTRCujM/sddefault.jpg" alt="...">
           </div>
         </div>
         <div class="col-sm-6 col-md-12">
           <div class="thumbnail" data-href="https://www.youtube.com/embed/EpjcgOz_uQ0">
-            <img src="http://placehold.it/350x150" alt="...">
+            <img src="http://img.youtube.com/vi/EpjcgOz_uQ0/sddefault.jpg" alt="...">
           </div>
         </div>
         <div class="col-sm-6 col-md-12">
@@ -95,6 +95,7 @@
 <script src="themes/6/mcVideoPlugin.js" type="text/javascript"></script>
 <script src="themes/6/js-image-slider.js" type="text/javascript"></script>
 <script src="js/video.js" type="text/javascript"></script>
+<script src="js/previewtube.js" type="text/javascript"></script>
 <!--scripts-->
 </body>
 </html>
