--- a/video.html
+++ b/video.html
@@ -32,10 +32,20 @@
   <div class="row">
     <div class="col-md-8">
       <div class="embed-responsive embed-responsive-video correct">
-        <iframe id="mainVideo" src="https://www.youtube.com/embed/F4DL31uxPIU" frameborder="0"
+        <iframe id="mainVideo" src="https://www.youtube.com/embed/c1RS4wSdEVQ?rel=0&autoplay=1" frameborder="0"
                 allowfullscreen></iframe>
       </div>
+      <span class="question"><em>Подобаються наші уроки? В нас є цілий курс з ефективної комунікації.<br>
+      Детальніше можна дізнатись за <a href="https://www.facebook.com/events/890742111011786/" target="_blank">посиланням</a></em></span><br>
+      <div class="image">
 
+      <span class="question"><em>До якої категорії відноситесь Ви?</em><br></span>
+
+        <img src="images/arrow.png">
+      </div>
+      <div class="clearfix"></div>
+
+        <div class="clearfix"></div>
       <!-- Begin COMMENTS -->
       <div class="row">
         <div class="col-md-6">
@@ -53,23 +63,18 @@
       <div class="row" id="listVideo">
         <!-- Lessens list -->
         <div class="col-sm-6 col-md-12">
-          <div class="thumbnail" data-href="https://www.youtube.com/embed/F4DL31uxPIU">
-            <img src="http://img.youtube.com/vi/F4DL31uxPIU/sddefault.jpg" alt="..." class="preViewTube">
+          <div class="thumbnail" data-href="https://www.youtube.com/embed/c1RS4wSdEVQ">
+            <img src="http://img.youtube.com/vi/c1RS4wSdEVQ/sddefault.jpg" alt="..." class="preViewTube">
           </div>
         </div>
         <div class="col-sm-6 col-md-12">
-          <div class="thumbnail" data-href="https://www.youtube.com/embed/5CEEjTRCujM">
-            <img src="http://img.youtube.com/vi/5CEEjTRCujM/sddefault.jpg" alt="...">
+          <div class="thumbnail" data-href="https://www.youtube.com/embed/JUrUR_x2TCQ">
+            <img src="http://img.youtube.com/vi/JUrUR_x2TCQ/sddefault.jpg" alt="...">
           </div>
         </div>
         <div class="col-sm-6 col-md-12">
-          <div class="thumbnail" data-href="https://www.youtube.com/embed/EpjcgOz_uQ0">
-            <img src="http://img.youtube.com/vi/EpjcgOz_uQ0/sddefault.jpg" alt="...">
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-12">
-          <div class="thumbnail">
-            <img src="http://placehold.it/350x150" alt="...">
+          <div class="thumbnail" data-href="https://www.youtube.com/embed/bByZ9x8ZAOI">
+            <img src="http://img.youtube.com/vi/bByZ9x8ZAOI/sddefault.jpg" alt="...">
           </div>
         </div>
       </div>
